be/src/util/memory-metrics.h
@@ -39,7 +39,7 @@ class AggregateMemoryMetric {
   /// The sum of Tcmalloc TOTAL_BYTES_RESERVED and BufferPool SYSTEM_ALLOCATED.
   /// Approximates the total amount of physical memory consumed by the backend (i.e. not
   /// including JVM memory), which is either in use by queries or cached by the BufferPool
-  /// or TcMalloc.
+  /// or TcMalloc. NULL when running under ASAN.
   static SumGauge<uint64_t>* TOTAL_USED;
 };
 
